[BEM] - Added box-sizing border-box for prevent overflow by padding

--- a/src/scss/mobile/blocks/list-item.scss
+++ b/src/scss/mobile/blocks/list-item.scss
@@ -1,4 +1,5 @@
 .list-item {
+  box-sizing: border-box;
   display: block;
   width: 100%;
 
